fix: margin issue. Make marquee visible

--- a/scss/main.scss
+++ b/scss/main.scss
@@ -42,9 +42,17 @@ main{
 
 .main-top {
     flex-direction: column;
+    position: relative;
 
     img {
         width: auto;
+        margin-top: -45px;
+    }
+
+    .project-holder {
+        position: relative;
+        // margin-top: -10px;
+        margin-bottom: -30px;
     }
 }
 
